
= rufus-scheduler CHANGELOG.txt


== rufus-scheduler - 3.2.1    not yet released

- simplify .parse_duration (and trim input)
- raise on "*/0 * * * *", by https://github.com/simook
- introduce "days to end of month" in cron strings


== rufus-scheduler - 3.2.0    released 2015-12-28

- cache CronLine#brute_frequency results, gh-188 and gh-89
- "every" shift prevention by https://github.com/Korrigan
- Ruby warnings silenced by https://github.com/vivitar


== rufus-scheduler - 3.1.10    released 2015-11-18

- allow for :first_in => 0, gh-179 by https://github.com/JonMcPherson
  for https://github.com/Shopify/dashing/commit/ea3730fa4
- stop shipping specs in gem


== rufus-scheduler - 3.1.9    released 2015-11-12

- fix potential RuntimeError in CronLine#prev_second,
  by Alexandru https://github.com/alexandru-calinoiu


== rufus-scheduler - 3.1.8    released 2015-11-10

- stop jumping eagerly out of DST, fix for one hour jump when leaving DST
  thanks Alyssa http://github.com/alyssa


== rufus-scheduler - 3.1.7    released 2015-10-15

- ack #unscheduled_at in #scheduled?, by Claude https://github.com/claudeatsafe


== rufus-scheduler - 3.1.6    released 2015-10-01

- fix job id uniqueness (JRuby), thanks 김성식 https://github.com/kssminus


== rufus-scheduler - 3.1.5    released 2015-09-25

- fix for "not a valid cronline" on "mingw" Ruby distributions, gh-166


== rufus-scheduler - 3.1.4    released 2015/08/29

- fix cron issue reported by Jesse https://github.com/jhw-at-prosperworks-com


== rufus-scheduler - 3.1.3    released 2015/06/20

- prevent Thread[:rufus_scheduler_time] -> nil, gh-156
- fix inconsistency in Job#start_work_thread


== rufus-scheduler - 3.1.2    released 2015/05/23

- avoid cron/:first_at infinite loop, thanks https://github.com/pouellet


== rufus-scheduler - 3.1.1    released 2015/04/19

- fix ZoTime.is_timezone? on OSX, thanks https://github.com/yaauie


== rufus-scheduler - 3.1.0    released 2015/04/18
